--- a/index.html
+++ b/index.html
@@ -54,19 +54,19 @@
         <div class="box">
           <ul class="clearfix">
             <li>
-              <div class="cover" style="background-image:url(http://cloud.hunger-valley.com/music/public_tuijian_spring.jpg-small)"></div>
+              <div class="cover" style="background-image:url(https://cloud.hunger-valley.com/music/public_tuijian_spring.jpg-small)"></div>
               <h3>漫步春天</h3>
             </li>
             <li>
-              <div class="cover" style="background-image:url(http://cloud.hunger-valley.com/music/public_tuijian_spring.jpg-small)"></div>
+              <div class="cover" style="background-image:url(https://cloud.hunger-valley.com/music/public_tuijian_spring.jpg-small)"></div>
               <h3>漫步春天</h3>
             </li>
             <li>
-              <div class="cover" style="background-image:url(http://cloud.hunger-valley.com/music/public_tuijian_spring.jpg-small)"></div>
+              <div class="cover" style="background-image:url(https://cloud.hunger-valley.com/music/public_tuijian_spring.jpg-small)"></div>
               <h3>漫步春天</h3>
             </li>
             <li>
-              <div class="cover" style="background-image:url(http://cloud.hunger-valley.com/music/public_tuijian_spring.jpg-small)"></div>
+              <div class="cover" style="background-image:url(https://cloud.hunger-valley.com/music/public_tuijian_spring.jpg-small)"></div>
               <h3>漫步春天</h3>
             </li>
           </ul>
